alteração de cores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
     <header>
 
-       <h1 class= "title">Bem vindos a amazon serviços </h1>
+       <h1 class= "title">Parceria Amazon Serviços</h1>
 
      </header>
 
